\name{diffHicnews}
\title{diffHic News}
\encoding{UTF-8}

\section{Version 0.99.0}{\itemize{
\item 
New package \code{diffHic}, for detection of differential interactions from Hi-C data.
}}