@@ -1,6 +1,6 @@
 
-R Under development (unstable) (2014-12-14 r67167) -- "Unsuffered Consequences"
-Copyright (C) 2014 The R Foundation for Statistical Computing
+R version 3.2.0 (2015-04-16) -- "Full of Ingredients"
+Copyright (C) 2015 The R Foundation for Statistical Computing
 Platform: x86_64-unknown-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -164,6 +164,7 @@ DataFrame with 1 row and 1 column
 > exptData(data)
 List of length 2
 names(2): param width
+> 
 > asDGEList(data)
 An object of class "DGEList"
 $counts
@@ -183,6 +184,46 @@ $samples
         group lib.size norm.factors
 Sample1     1       17            1
 
+> asDGEList(data, lib.size=20)$samples
+        group lib.size norm.factors
+Sample1     1       20            1
+> asDGEList(data, norm.factors=2, group="a")$samples
+        group lib.size norm.factors
+Sample1     a       17            2
+> 
+> # Simple normalization with dummy data.
+> set.seed(3423746)
+> npts <- 100
+> npairs <- 5000
+> nlibs <- 4
+> anchors <- sample(npts, npairs, replace=TRUE)
+> targets <- sample(npts, npairs, replace=TRUE)
+> dummy <- DIList(counts=matrix(rpois(npairs*nlibs, runif(npairs, 10, 100)), nrow=npairs),
++     totals=runif(nlibs, 1e6, 2e6), anchors=pmax(anchors, targets), targets=pmin(anchors, targets),
++     regions=GRanges("chrA", IRanges(1:npts, 1:npts)))
+> 
+> normalize(dummy)
+[1] 1.0797832 0.8315380 0.9929251 1.1216694
+> normalize(dummy, logratio=0)
+[1] 1.0811624 0.8302083 0.9910453 1.1241609
+> normalize(dummy, lib.sizes=c(10, 20, 15, 25))
+[1] 1.6546731 0.8295975 1.1041603 0.6597634
+> head(normalize(dummy, type="loess"))
+             [,1]          [,2]         [,3]         [,4]
+[1,] -0.001441205  0.0009288939  0.004926866 -0.004414554
+[2,]  0.005400644  0.0041595563 -0.006896160 -0.002664040
+[3,]  0.003115173 -0.0016344141  0.001783304 -0.003264063
+[4,]  0.005334707  0.0035367045 -0.005104467 -0.003766944
+[5,] -0.003505621  0.0163064678 -0.001889799 -0.010911049
+[6,]  0.004070284  0.0090487766 -0.008279824 -0.004839236
+> head(normalize(dummy, type="loess", span=0.5))
+              [,1]          [,2]         [,3]          [,4]
+[1,] -0.0024209796  0.0006743125  0.003720243 -0.0019735760
+[2,]  0.0063348114  0.0041435478 -0.006281532 -0.0041968270
+[3,] -0.0009160649 -0.0004010364  0.002050126 -0.0007330249
+[4,]  0.0067668245  0.0036523894 -0.005981150 -0.0044380642
+[5,] -0.0016877752  0.0152247089 -0.006733300 -0.0068036332
+[6,]  0.0031066340  0.0085339739 -0.006865168 -0.0047754397
 > 
 > # Playing around with some bin counts.
 > stuff <- correctedContact(data)
@@ -207,4 +248,4 @@ Sample1     1       17            1
 > 
 > proc.time()
    user  system elapsed 
-  9.364   0.174   9.532 
+  6.580   0.184   6.798 
