@@ -2,7 +2,12 @@
 \title{diffHic News}
 \encoding{UTF-8}
 
-\section{Version 0.99.0}{\itemize{
+\section{Version 1.1.1}{\itemize{
+\item
+Added library size specification to DIList methods normalize(), asDGEList().
+}}
+
+\section{Version 1.0.0}{\itemize{
 \item 
 New package \code{diffHic}, for detection of differential interactions from Hi-C data.
 }}
